[gd_scene load_steps=23 format=3 uid="uid://cmgxm7xxbmllx"]

[ext_resource type="Script" uid="uid://cdrxktxj56hex" path="res://player.gd" id="1_1ap6j"]
[ext_resource type="Script" uid="uid://dwqb6l7fogyav" path="res://spawner.gd" id="1_8c340"]
[ext_resource type="Script" uid="uid://s08ileitx4jg" path="res://back_ground.gd" id="1_qew1n"]
[ext_resource type="Texture2D" uid="uid://bixsuatw2nvos" path="res://sprites/background/céu azul.png" id="1_t8pok"]
[ext_resource type="Texture2D" uid="uid://cmqs7ab6fe5vl" path="res://sprites/background/céu.png" id="2_mtw28"]
[ext_resource type="Texture2D" uid="uid://bt4hca8xttx04" path="res://sprites/background/cidade.png" id="3_orj5g"]
[ext_resource type="Texture2D" uid="uid://c6g6k3dhaqjsq" path="res://sprites/bird_orange_0.png" id="3_qn35j"]
[ext_resource type="Texture2D" uid="uid://bi6684qejy888" path="res://sprites/background/grama.png" id="4_01kpq"]
[ext_resource type="Texture2D" uid="uid://cu5ikoa326saa" path="res://sprites/bird_orange_1.png" id="4_8c340"]
[ext_resource type="Texture2D" uid="uid://cs4yqjyrei4e3" path="res://sprites/bird_orange_2.png" id="5_45nkh"]
[ext_resource type="Texture2D" uid="uid://cajxuqhd022g3" path="res://sprites/ground.png" id="5_mtw28"]
[ext_resource type="Script" uid="uid://fiwv37etv5ik" path="res://ui game.gd" id="11_7rhuj"]
[ext_resource type="FontFile" uid="uid://du3gtbivqhcby" path="res://sprites/background/flappy-bird-font.otf" id="11_orj5g"]
[ext_resource type="Texture2D" uid="uid://dj0cwr0byoraj" path="res://sprites/instructions.png" id="13_2ka1p"]
[ext_resource type="Texture2D" uid="uid://t471fyihnq5f" path="res://sprites/label_get_ready.png" id="14_7rhuj"]
[ext_resource type="Texture2D" uid="uid://c0770cju03ibu" path="res://sprites/button_pause.png" id="15_qew1n"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_qn35j"]
normal = Vector2(0, 0.785)
distance = -165.0

[sub_resource type="SpriteFrames" id="SpriteFrames_45nkh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qn35j")
}, {
"duration": 1.0,
"texture": ExtResource("4_8c340")
}, {
"duration": 1.0,
"texture": ExtResource("5_45nkh")
}, {
"duration": 1.0,
"texture": ExtResource("4_8c340")
}, {
"duration": 1.0,
"texture": ExtResource("3_qn35j")
}],
"loop": false,
"name": &"voar",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ap6j"]
size = Vector2(16, 12)

[sub_resource type="Animation" id="Animation_msvki"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Center Instructions:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Center Instructions:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Center Instructions:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Center Instructions:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_7rhuj"]
resource_name = "fade out"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Center Instructions:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Center Instructions:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Center Instructions:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Center Instructions:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_msvki"]
_data = {
&"RESET": SubResource("Animation_msvki"),
&"fade out": SubResource("Animation_7rhuj")
}

[node name="Jogo" type="Node2D"]

[node name="BackGround" type="Node2D" parent="."]
position = Vector2(96, 0)
script = ExtResource("1_qew1n")

[node name="CéuAzul" type="Sprite2D" parent="BackGround"]
position = Vector2(-96, 0)
texture = ExtResource("1_t8pok")

[node name="Parallax2D" type="Parallax2D" parent="BackGround"]
repeat_size = Vector2(144, 0)
autoscroll = Vector2(-10, 0)
repeat_times = 2
ignore_camera_scroll = true

[node name="Céu" type="Sprite2D" parent="BackGround/Parallax2D"]
texture = ExtResource("2_mtw28")

[node name="Parallax2D2" type="Parallax2D" parent="BackGround"]
repeat_size = Vector2(144, 0)
autoscroll = Vector2(-15, 0)
repeat_times = 2

[node name="cidade" type="Sprite2D" parent="BackGround/Parallax2D2"]
texture = ExtResource("3_orj5g")

[node name="Parallax2D3" type="Parallax2D" parent="BackGround"]
repeat_size = Vector2(144, 0)
autoscroll = Vector2(-20, 0)
repeat_times = 2

[node name="grama" type="Sprite2D" parent="BackGround/Parallax2D3"]
texture = ExtResource("4_01kpq")

[node name="Parallax2D4" type="Parallax2D" parent="BackGround"]
scroll_offset = Vector2(0, -40.5)
repeat_size = Vector2(144, 0)
autoscroll = Vector2(-100, 0)
repeat_times = 2

[node name="Ground" type="Sprite2D" parent="BackGround/Parallax2D4"]
z_index = 10
position = Vector2(0, 143)
texture = ExtResource("5_mtw28")

[node name="Cantos" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cantos"]
shape = SubResource("WorldBoundaryShape2D_qn35j")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Cantos"]
position = Vector2(1, -13)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_qn35j")

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource("1_8c340")

[node name="Marker2D" type="Marker2D" parent="Spawner"]
position = Vector2(227, -90)

[node name="Marker2D2" type="Marker2D" parent="Spawner"]
position = Vector2(227, 32)

[node name="Timer" type="Timer" parent="Spawner"]
wait_time = 1.5
autostart = true

[node name="Jogador" type="CharacterBody2D" parent="."]
z_index = 15
position = Vector2(-30, -48)
script = ExtResource("1_1ap6j")

[node name="Sprite" type="AnimatedSprite2D" parent="Jogador"]
sprite_frames = SubResource("SpriteFrames_45nkh")
animation = &"voar"
frame = 4
frame_progress = 1.0

[node name="hitbox" type="Area2D" parent="Jogador"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jogador/hitbox"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_1ap6j")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_7rhuj")

[node name="Point Display" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -8.0
offset_top = 8.0
offset_right = 9.0
offset_bottom = 31.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("11_orj5g")
theme_override_font_sizes/font_size = 20
text = "0"

[node name="Center Instructions" type="CenterContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -45.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2

[node name="Intructions" type="Control" parent="CanvasLayer/UI/Center Instructions"]
layout_mode = 2

[node name="Instructions sprite" type="TextureRect" parent="CanvasLayer/UI/Center Instructions/Intructions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = 30.0
offset_right = 28.5
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_2ka1p")

[node name="Get ready sprite" type="TextureRect" parent="CanvasLayer/UI/Center Instructions/Intructions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -28.0
offset_right = 46.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_7rhuj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/UI"]
libraries = {
&"": SubResource("AnimationLibrary_msvki")
}

[node name="Pause Container" type="CenterContainer" parent="CanvasLayer/UI"]
layout_mode = 1
offset_right = 23.0
offset_bottom = 25.0

[node name="Pause Button" type="TextureButton" parent="CanvasLayer/UI/Pause Container"]
layout_mode = 2
texture_normal = ExtResource("15_qew1n")

[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_timer_timeout"]
[connection signal="area_entered" from="Jogador/hitbox" to="Jogador" method="_on_area_2d_area_entered"]
[connection signal="pressed" from="CanvasLayer/UI/Pause Container/Pause Button" to="CanvasLayer/UI" method="_on_pause_button_pressed"]
